@@ -157,7 +157,7 @@ class Album {
 				"item_owner_delete", 
 				"add_to_beginning");
 		foreach ($check as $field) {
-			if (!$this->fields[$field]) {
+			if (!isset($this->fields[$field])) {
 				$this->fields[$field] = $gallery->app->default[$field];
 				$changed = 1;
 			}
@@ -1187,8 +1187,12 @@ class Album {
 	}
 
 	function getPerm($permName, $uid) {
-		$perm = $this->fields["perms"][$permName];
-		if ($perm[$uid]) {
+		if (isset($this->fields["perms"][$permName])) {
+			$perm = $this->fields["perms"][$permName];
+		} else {
+			$perm=array();
+		}
+		if (isset($perm[$uid])) {
 			return true;
 		}
 
@@ -1196,7 +1200,7 @@ class Album {
 
 		/* If everybody has the perm, then we do too */
 		$everybody = $gallery->userDB->getEverybody();
-		if ($perm[$everybody->getUid()]) {
+		if (isset($perm[$everybody->getUid()])) {
 			return true;
 		}
 
@@ -1205,7 +1209,7 @@ class Album {
 		 * we're ok also.
 		 */
 		$loggedIn = $gallery->userDB->getLoggedIn();
-		if ($perm[$loggedIn->getUid()] &&
+		if (isset($perm[$loggedIn->getUid()]) &&
 		    strcmp($gallery->user->getUid(), $everybody->getUid())) {
 		        return true;
 		}
