@@ -11,6 +11,9 @@ if ($adminbox["bordercolor"]) {
 } else {
 	$borderIn = "#FFFFFF";
 }
+if (!isset($adminbox["commands"])) {
+	$adminbox["commands"] = "";
+}
 $imageDir = $gallery->app->photoAlbumURL."/images";
 $pixelImage = "<img src=\"$imageDir/pixel_trans.gif\" width=\"1\" height=\"1\">";
 
