@@ -70,3 +70,23 @@
 ../view_comments.php
 ../view_photo.php
 ../view_photo_properties.php
+../html_wrap/album.footer.default
+../html_wrap/album.header.default
+../html_wrap/gallery.footer.default
+../html_wrap/gallery.header.default
+../html_wrap/inline_albumthumb.footer.default
+../html_wrap/inline_albumthumb.frame.default
+../html_wrap/inline_albumthumb.header.default
+../html_wrap/inline_gallerythumb.frame.default
+../html_wrap/inline_moviethumb.frame.default
+../html_wrap/inline_photo.footer.default
+../html_wrap/inline_photo.header.default
+../html_wrap/inline_photothumb.frame.default
+../html_wrap/photo.footer.default
+../html_wrap/photo.header.default
+../html_wrap/search.footer.default
+../html_wrap/search.header.default
+../html_wrap/slideshow.footer.default
+../html_wrap/slideshow.header.default
+../html_wrap/wrapper.footer.default
+../html_wrap/wrapper.header.default
