@@ -66,7 +66,7 @@ if (!isset($page)) {
 
 $albumName = $gallery->session->albumName;
 
-if (!$gallery->session->viewedAlbum[$albumName] && !$gallery->session->offline) {
+if (!isset($gallery->session->viewedAlbum[$albumName]) && !$gallery->session->offline) {
 	$gallery->session->viewedAlbum[$albumName] = 1;
 	$gallery->album->incrementClicks();
 } 
@@ -99,16 +99,17 @@ if ($previousPage == 0) {
 $bordercolor = $gallery->album->fields["bordercolor"];
 
 $imageCellWidth = floor(100 / $cols) . "%";
-$fullWidth="100%";
 
 $navigator["page"] = $page;
 $navigator["pageVar"] = "page";
 $navigator["maxPages"] = $maxPages;
-$navigator["fullWidth"] = $fullWidth;
+$navigator["fullWidth"] = "100";
+$navigator["widthUnits"] = "%";
 $navigator["url"] = makeAlbumUrl($gallery->session->albumName);
 $navigator["spread"] = 5;
 $navigator["bordercolor"] = $bordercolor;
 
+$fullWidth = $navigator["fullWidth"] . $navigator["widthUnits"];
 $breadCount = 0;
 $breadtext = array();
 $pAlbum = $gallery->album;
@@ -118,12 +119,12 @@ do {
   }
   $pAlbumName = $pAlbum->fields['parentAlbumName'];
   if ($pAlbumName && (!$gallery->session->offline 
-     || $gallery->session->offlineAlbums[$pAlbumName])) {
+     || isset($gallery->session->offlineAlbums[$pAlbumName]))) {
 	$pAlbum = new Album();
 	$pAlbum->load($pAlbumName);
 	$breadtext[$breadCount] = _("Album") .": <a href=\"" . makeAlbumUrl($pAlbumName) . 
 	"\">" . $pAlbum->fields['title'] . "</a>";
-  } elseif (!$gallery->session->offline || $gallery->session->offlineAlbums["albums.php"]) {
+  } elseif (!$gallery->session->offline || isset($gallery->session->offlineAlbums["albums.php"])) {
 	//-- we're at the top! --- 
 	$breadtext[$breadCount] = _("Gallery") .": <a href=\"" . makeGalleryUrl("albums.php") . 
 	"\">" . $gallery->app->galleryTitle . "</a>"; 
@@ -157,15 +158,15 @@ $breadcrumb["bordercolor"] = $bordercolor;
       <link rel="last" href="<?php echo makeAlbumUrl($gallery->session->albumName, '', array('page' => $maxPages)) ?>" />
   <?php } if ($gallery->album->isRoot() && 
   	(!$gallery->session->offline || 
-	 $gallery->session->offlineAlbums["albums.php"])) { ?>
+	 isset($gallery->session->offlineAlbums["albums.php"]))) { ?>
   <link rel="up" href="<?php echo makeAlbumUrl(); ?>" />
       <?php
       } else if (!$gallery->session->offline || 
-	 $gallery->session->offlineAlbums[$pAlbum->fields['parentAlbumName']]) { ?>
+	 isset($gallery->session->offlineAlbums[$pAlbum->fields['parentAlbumName']])) { ?>
   <link rel="up" href="<?php echo makeAlbumUrl($gallery->album->fields['parentAlbumName']); ?>" />
   <?php } 
   	if (!$gallery->session->offline || 
-	 $gallery->session->offlineAlbums["albums.php"]) { ?>
+	 isset($gallery->session->offlineAlbums["albums.php"])) { ?>
   <link rel="top" href="<?php echo makeGalleryUrl('albums.php', array('set_albumListPage' => 1)) ?>" />
   <?php } ?>
   <style type="text/css">
@@ -182,7 +183,7 @@ if ($gallery->album->fields["linkcolor"]) {
 if ($gallery->album->fields["bgcolor"]) {
 	echo "BODY { background-color:".$gallery->album->fields['bgcolor']."; }";
 }
-if ($gallery->album->fields["background"]) {
+if (isset($gallery->album->fields["background"])) {
 	echo "BODY { background-image:url(".$gallery->album->fields['background']."); } ";
 }
 if ($gallery->album->fields["textcolor"]) {
@@ -224,7 +225,7 @@ if ($gallery->album->fields["textcolor"]) {
 	  var sel_value = selected_select.options[sel_index].value;
 	  selected_select.options[0].selected = true;
 	  selected_select.blur();
-	  <?php echo popup(sel_value, 1) ?>
+	  <?php echo popup('sel_value', 1) ?>
   } 
   // --> 
   </script>
