@@ -1,3 +1,10 @@
+2003-08-18  Joan McGalliard <gallery@joanhenge.plus.com> 1.4.1-cvs-b4
+
+	* Warning message reductions throughout.
+
+	* Add html_wrap files to po/filelist, as they _could_ contain
+	  language strings.
+
 2003-08-17  Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b3
 
         * Fix bug in Nuke integration where the language was never saved.
